[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "kitware", "gitlab", "purepy", "cv2", "gdal",]
mod_name = "delayed_image"
repo_name = "delayed_image"
rel_mod_parent_dpath = "."
os = [ "all", "win", "linux", "osx",]
min_python = '3.8'
max_python = '3.13'
ci_cpython_versions = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
version = "{mod_dpath}/__init__.py::__version__"
author = "Jon Crall"
author_email = "jon.crall@kitware.com"
description = "The delayed_image module"
typed = true
license = "Apache 2"
render_doc_images = 1
dev_status = "planning"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "delayed_image/__main__.py", "*/setup.py",]
